# Food-Blog

./: db.sqlite3  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  api_urls.py  models.py  serializers.py  views.py
posts/migrations/: 0001_initial.py
recipes/: admin.py  api_urls.py  models.py  serializers.py  views.py
recipes/migrations/: 0001_initial.py
users/: admin.py  api_urls.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
