[project]
name = "Food-Blog"
version = "0.1.0"
description = "this is a blog about food"
authors = [
    {name = "parisarn98",email = "parisa.rangrizi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.4,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
